Closed
Bug 1660853
Opened 5 years ago
Closed 5 years ago
Private method initializers fail during JIT compilation
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox82 | --- | fixed |
People
(Reporter: avandolder, Assigned: avandolder)
References
Details
Attachments
(1 file)
Calling mach run --enable-private-fields --enable-private-methods --baseline-eager -e "class A { #p() {} m() { this.#p(); } }; new A().m()" currently fails with Assertion failure: stackDepth() == depth, at js/src/jit/BaselineFrameInfo.h:273. This seems to be due to private methods initializers returning without clearing out the stack.
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by avandolder@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b101041d60c8
Make sure to empty stack in private method initializers. r=jorendorff
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•