Bug 1660853 - Make sure to empty stack in private method initializers. r=jorendorff

Differential Revision: https://phabricator.services.mozilla.com/D88050